# rust-forum

./: .gitignore  Cargo.toml  README.md  dex_example.yaml  env.template  shell.nix
migrations/2022-10-14-121250_create_users/: down.sql  up.sql
migrations/2022-10-14-150439_create_posts/: up.sql
migrations/2022-10-14-150452_create_topics/: down.sql  up.sql
migrations/2022-10-14-150508_create_forums/: down.sql  up.sql
migrations/2022-10-14-150513_create_boards/: down.sql  up.sql
migrations/2022-10-19-142739_insert_testdata/: up.sql
src/: README.md  basic_test.rs  db.rs  hatch.rs  lib.rs  main.rs  schema.rs  user.rs
src/models/: board.rs  forum.rs  mod.rs  post.rs  topic.rs  user.rs
src/routes/: admin.rs  board.rs  forum.rs  lib.rs  mod.rs  other.rs  ping.rs  post.rs  topic.rs  user.rs
static/: board.rs  forum.rs  style.css
templates/: admin.html.tera  base.html.tera  board-new.html.tera  board-new.tera  board.html.tera  error.html.tera  forum-new.html.tera  forum.html.tera  forum.tera  forums.html.tera  forums.tera  macros.html.tera  posts.html.tera  schema.rs  topic-new.html.tera  topic.html.tera  user-edit.html.tera  user-list.html.tera  user-list.tera  user.html.tera  user.rs
