[package]
name = "vpub-rust"
version = "0.1.0"
authors = ["pinpox <git@pablo.tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
rocket = "0.4.5"
rocket_contrib = { version = "0.4.11", features = ["helmet", "tera_templates"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"


# rocket_contrib = { features=["tera_templates"] }

# [dependencies.rocket_contrib]
# # version = "0.4.10"
# default-features = false
# features = [ "tera_templates"]
