[package]
name = "vpub-rust"
version = "0.1.0"
authors = ["pinpox <git@pablo.tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
rocket = "0.5.0-rc.2"
diesel = { version = "2.0.2", features = ["sqlite", "chrono"] }
dotenvy = "0.15"

serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
rocket_airlock = "0.3.0-rc.1"
openidconnect = "2.3.2"
anyhow = "1.0.66"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

